add tags to papers with intracranial recordings in humans

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2021-02-16 11:46:55 +0100 
+%% Created for Wittkuhn, Lennart at 2021-02-16 11:47:24 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -4271,7 +4271,7 @@ The Brain from Inside Out explains why our brain is not an information-absorbing
 	abstract = {Reward-motivated behavior is strongly influenced by the learned significance of contextual stimuli in the environment. However, the neural pathways that mediate context-reward relations are not well understood. We have identified a circuit from area CA3 of dorsal hippocampus to ventral tegmental area (VTA) that uses lateral septum (LS) as a relay. Theta frequency stimulation of CA3 excited VTA dopamine (DA) neurons and inhibited non-DA neurons. DA neuron excitation was likely mediated by disinhibition because local antagonism of γ-aminobutyric acid receptors blocked responses to CA3 stimulation. Inactivating components of the CA3-LS-VTA pathway blocked evoked responses in VTA and also reinstatement of cocaine-seeking by contextual stimuli. This transsynaptic link between hippocampus and VTA appears to be an important substrate by which environmental context regulates goal-directed behavior.},
 	author = {Luo, Alice H. and Tahsili-Fahadan, Pouya and Wise, Roy A. and Lupica, Carl R. and Aston-Jones, Gary},
 	date-added = {2021-01-19 11:21:31 +0100},
-	date-modified = {2021-01-19 11:21:49 +0100},
+	date-modified = {2021-02-16 09:50:42 +0100},
 	doi = {10.1126/science.1204622},
 	eprint = {https://science.sciencemag.org/content/333/6040/353.full.pdf},
 	issn = {0036-8075},
@@ -4279,7 +4279,7 @@ The Brain from Inside Out explains why our brain is not an information-absorbing
 	number = {6040},
 	pages = {353--357},
 	publisher = {American Association for the Advancement of Science},
-	title = {Linking Context with Reward: A Functional Circuit from Hippocampal CA3 to Ventral Tegmental Area},
+	title = {Linking Context with Reward: A Functional Circuit from Hippocampal {CA3} to Ventral Tegmental Area},
 	url = {https://science.sciencemag.org/content/333/6040/353},
 	volume = {333},
 	year = {2011},
@@ -17088,7 +17088,7 @@ The results, from over 110,000 trials, highlight the wide range of timing qualit
 	abstract = {Episodic memory retrieval is thought to rely on the replay of past experiences, yet it remains unknown how human single-unit activity is temporally organized during episodic memory encoding and retrieval. We found that ripple oscillations in the human cortex reflect underlying bursts of single-unit spiking activity that are organized into memory-specific sequences. Spiking sequences occurred repeatedly during memory formation and were replayed during successful memory retrieval, and this replay was associated with ripples in the medial temporal lobe. Together, these data demonstrate that human episodic memory is encoded by specific sequences of neural activity and that memory recall involves reinstating this temporal order of activity.},
 	author = {Vaz, Alex P. and Wittig, John H. and Inati, Sara K. and Zaghloul, Kareem A.},
 	date-added = {2020-03-06 10:02:26 +0100},
-	date-modified = {2020-03-31 14:28:12 +0200},
+	date-modified = {2021-02-16 11:43:54 +0100},
 	doi = {10.1126/science.aba0672},
 	issn = {1095-9203},
 	journal = {Science},
@@ -17096,7 +17096,7 @@ The results, from over 110,000 trials, highlight the wide range of timing qualit
 	number = {6482},
 	pages = {1131--1134},
 	publisher = {American Association for the Advancement of Science (AAAS)},
-	tags = {replay; human},
+	tags = {replay, human, intracranial},
 	title = {Replay of cortical spiking sequences during human memory retrieval},
 	url = {http://dx.doi.org/10.1126/science.aba0672},
 	volume = {367},
@@ -23350,13 +23350,14 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	abstract = {Consolidation stabilizes memory traces after initial encoding. Rodent studies suggest that memory consolidation depends on replay of stimulus-specific activity patterns during fast hippocampal ``ripple'' oscillations. Here, we measured replay in intracranial electroencephalography recordings in human epilepsy patients, and related replay to ripples. Stimulus-specific activity was identified using representational similarity analysis and then tracked during waking rest and sleep after encoding. Stimulus-specific gamma (30--90 Hz) activity during early (100--500 ms) and late (500--1200 ms) encoding is spontaneously reactivated during waking state and sleep, independent of later memory. Ripples during nREM sleep, but not during waking state, trigger replay of activity from the late time window specifically for remembered items. Ripple-triggered replay of activity from the early time window during nREM sleep is enhanced for forgotten items. These results provide the first electrophysiological evidence for replay related to memory consolidation in humans, and point to a prominent role of nREM ripple-triggered replay in consolidation processes.},
 	author = {Zhang, Hui and Fell, Juergen and Axmacher, Nikolai},
 	date-added = {2019-11-25 12:15:28 +0100},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:46:52 +0100},
 	doi = {10.1038/s41467-018-06553-y},
 	issn = {2041-1723},
 	journal = {Nature Communications},
 	month = {Oct},
 	number = {1},
 	publisher = {Springer Science and Business Media LLC},
+	tags = {human, intracranial},
 	title = {Electrophysiological mechanisms of human memory consolidation},
 	url = {http://dx.doi.org/10.1038/s41467-018-06553-y},
 	volume = {9},
@@ -24647,7 +24648,7 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	abstract = {Hippocampal sharp-wave ripples (SWRs) constitute one of the most synchronized activation events in the brain and play a critical role in offline memory consolidation. Yet their cognitive content and function during awake, conscious behavior remains unclear. We directly examined this question using intracranial recordings in human patients engaged in episodic free recall of previously viewed photographs. Our results reveal a content-selective increase in hippocampal ripple rate emerging 1 to 2 seconds prior to recall events. During recollection, high-order visual areas showed pronounced SWR-coupled reemergence of activation patterns associated with recalled content. Finally, the SWR rate during encoding predicted subsequent free-recall performance. These results point to a role for hippocampal SWRs in triggering spontaneous recollections and orchestrating the reinstatement of cortical representations during free episodic memory retrieval.},
 	author = {Norman, Yitzhak and Yeagle, Erin M. and Khuvis, Simon and Harel, Michal and Mehta, Ashesh D. and Malach, Rafael},
 	date-added = {2019-11-05 13:50:01 +0100},
-	date-modified = {2020-03-31 14:28:12 +0200},
+	date-modified = {2021-02-16 11:45:07 +0100},
 	doi = {10.1126/science.aax1030},
 	issn = {1095-9203},
 	journal = {Science},
@@ -24655,6 +24656,7 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	number = {6454},
 	pages = {eaax1030},
 	publisher = {American Association for the Advancement of Science (AAAS)},
+	tags = {human, intracranial, ripples},
 	title = {Hippocampal sharp-wave ripples linked to visual episodic recollection in humans},
 	url = {http://dx.doi.org/10.1126/science.aax1030},
 	volume = {365},
@@ -25676,14 +25678,15 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 @article{Gelinas2019S,
 	author = {Gelinas, Jennifer},
 	date-added = {2019-09-26 19:48:01 +0200},
-	date-modified = {2020-03-31 14:28:12 +0200},
+	date-modified = {2021-02-16 11:45:31 +0100},
 	doi = {10.1126/science.aaw6767},
 	issn = {0036-8075},
 	journal = {Science},
 	number = {6430},
 	pages = {927--928},
 	pmid = {30819949},
-	title = {{Ripples for memory retrieval in humans}},
+	tags = {human, ripples, intracranial},
+	title = {Ripples for memory retrieval in humans},
 	url = {http://www.sciencemag.org/lookup/doi/10.1126/science.aaw6767},
 	volume = {363},
 	year = {2019},
@@ -26506,7 +26509,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {During systems-level consolidation, mnemonic representations initially reliant on the hippocampus are thought to migrate to neocortical sites for more permanent storage, with an eminent role of sleep for facilitating this information transfer. Mechanistically, consolidation processes have been hypothesized to rely on systematic interactions between the three cardinal neuronal oscillations characterizing non--rapid eye movement (NREM) sleep. Under global control of de- and hyperpolarizing slow oscillations (SOs), sleep spindles may cluster hippocampal ripples for a precisely timed transfer of local information to the neocortex. We used direct intracranial electroencephalogram recordings from human epilepsy patients during natural sleep to test the assumption that SOs, spindles and ripples are functionally coupled in the hippocampus. Employing cross-frequency phase-amplitude coupling analyses, we found that spindles were modulated by the up-state of SOs. Notably, spindles were found to in turn cluster ripples in their troughs, providing fine-tuned temporal frames for the hypothesized transfer of hippocampal memory traces.},
 	author = {Staresina, Bernhard P and Bergmann, Til Ole and Bonnefond, Mathilde and van der Meij, Roemer and Jensen, Ole and Deuker, Lorena and Elger, Christian E and Axmacher, Nikolai and Fell, Juergen},
 	date-added = {2019-09-19 18:16:00 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:43:15 +0100},
 	doi = {10.1038/nn.4119},
 	issn = {1546-1726},
 	journal = {Nature Neuroscience},
@@ -26514,6 +26517,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {11},
 	pages = {1679--1686},
 	publisher = {Springer Science and Business Media LLC},
+	tags = {human, intracranial},
 	title = {Hierarchical nesting of slow oscillations, spindles and ripples in the human hippocampus during sleep},
 	url = {http://dx.doi.org/10.1038/nn.4119},
 	volume = {18},
@@ -26524,7 +26528,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {It takes a fraction of a second to recognize a person or an object even when seen under strikingly different conditions. How such a robust, high-level representation is achieved by neurons in the human brain is still unclear. In monkeys, neurons in the upper stages of the ventral visual pathway respond to complex images such as faces and objects and show some degree of invariance to metric properties such as the stimulus size, position and viewing angle. We have previously shown that neurons in the human medial temporal lobe (MTL) fire selectively to images of faces, animals, objects or scenes. Here we report on a remarkable subset of MTL neurons that are selectively activated by strikingly different pictures of given individuals, landmarks or objects and in some cases even by letter strings with their names. These results suggest an invariant, sparse and explicit code, which might be important in the transformation of complex visual percepts into long-term and more abstract memories.},
 	author = {Quiroga, R. Quian and Reddy, L. and Kreiman, G. and Koch, C. and Fried, I.},
 	date-added = {2019-09-19 18:13:45 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:22:34 +0100},
 	doi = {10.1038/nature03687},
 	issn = {1476-4687},
 	journal = {Nature},
@@ -26532,6 +26536,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {7045},
 	pages = {1102--1107},
 	publisher = {Springer Nature},
+	tags = {human, intracranial},
 	title = {Invariant visual representation by single neurons in the human brain},
 	url = {http://dx.doi.org/10.1038/nature03687},
 	volume = {435},
@@ -26542,7 +26547,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {Place cells of the rodent hippocampus constitute one of the most striking examples of a correlation between neuronal activity and complex behaviour in mammals. These cells increase their firing rates when the animal traverses specific regions of its surroundings, providing a context-dependent map of the environment. Neuroimaging studies implicate the hippocampus and the parahippocampal region in human navigation. However, these regions also respond selectively to visual stimuli. It thus remains unclear whether rodent place coding has a homologue in humans or whether human navigation is driven by a different, visually based neural mechanism. We directly recorded from 317 neurons in the human medial temporal and frontal lobes while subjects explored and navigated a virtual town. Here we present evidence for a neural code of human spatial navigation based on cells that respond at specific spatial locations and cells that respond to views of landmarks. The former are present primarily in the hippocampus, and the latter in the parahippocampal region. Cells throughout the frontal and temporal lobes responded to the subjects' navigational goals and to conjunctions of place, goal and view.},
 	author = {Ekstrom, Arne D. and Kahana, Michael J. and Caplan, Jeremy B. and Fields, Tony A. and Isham, Eve A. and Newman, Ehren L. and Fried, Itzhak},
 	date-added = {2019-09-19 18:04:27 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:45:47 +0100},
 	doi = {10.1038/nature01964},
 	issn = {1476-4687},
 	journal = {Nature},
@@ -26550,6 +26555,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {6954},
 	pages = {184--188},
 	publisher = {Springer Nature},
+	tags = {human, intracranial},
 	title = {Cellular networks underlying human spatial navigation},
 	url = {http://dx.doi.org/10.1038/nature01964},
 	volume = {425},
@@ -26560,14 +26566,14 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {Ripples are 100--200 Hz short‐duration oscillatory field potentials that have recently been recorded in rat hippocampus and entorhinal cortex. They reflect fast IPSPs on the soma of pyramidal cells, which occur during synchronous afferent excitation of principal cells and interneuron networks. We now describe two similar types of high‐frequency field oscillations recorded from the entorhinal cortex and hippocampus of patients with mesial temporal lobe epilepsy. The first type appears be the human equivalent of normal ripples in the rat. The second, which we have termed fast ripples (FR), are in the frequency range of 250--500 Hz. FR are found in the epileptogenic region and may reflect pathological hypersynchronous population spikes of bursting pyramidal cells. },
 	author = {Bragin, Anatol and Engel, Jerome and Wilson, Charles L. and Fried, Itzhak and Buzs{\'a}ki, Gy{\"o}rgy},
 	date-added = {2019-09-19 17:59:38 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:46:05 +0100},
 	doi = {10.1002/(sici)1098-1063(1999)9:2<137::aid-hipo5>3.0.co;2-0},
 	issn = {1098-1063},
 	journal = {Hippocampus},
 	number = {2},
 	pages = {137--142},
 	publisher = {Wiley},
-	tags = {ripples},
+	tags = {ripples, human, intracranial},
 	title = {High-frequency oscillations in human brain},
 	url = {http://dx.doi.org/10.1002/(SICI)1098-1063(1999)9:2<137::AID-HIPO5>3.0.CO;2-0},
 	volume = {9},
@@ -26578,7 +26584,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {High-frequency oscillations (100--200 Hz), termed ripples, have been identified in hippocampal (Hip) and entorhinal cortical (EC) areas of rodents and humans. In contrast, higher-frequency oscillations (250--500 Hz), termed fast ripples (FR), have been described in seizure-generating limbic areas of rodents made epileptic by intrahippocampal injection of kainic acid and observed in humans ipsilateral to areas of seizure initiation. However, quantitative studies supporting the existence of two spectrally distinct oscillatory events have not been carried out in humans nor has the preferential appearance of FR within seizure generating areas received statistical evaluation based on analysis of a large sample of oscillatory events. Interictal oscillations within the bandwidth of 80--500 Hz were detected in Hip and EC areas of patients with mesial temporal lobe epilepsy using wideband EEG recorded during non-rapid eye-movement sleep from chronically implanted depth electrodes. Power spectral analysis showed that oscillations detected from Hip and EC areas were composed of two spectrally distinct groups. The lower-frequency ripple group was defined by a frequency of 96 $\pm$ 14 Hz (median $\pm$ width), while the higher-frequency FR group had a frequency of 262 $\pm$ 59 Hz. FR oscillations were significantly shorter in duration compared with ripple oscillations (P < 0.0001). In regard to the occurrence of FR and ripples in epileptic Hip and EC, the mean ratio of the number of FR to ripples generated in areas ipsilateral to seizure onset was significantly higher compared with the mean ratio of FR to ripple generation from contralateral areas (P = 0.008). Furthermore, sites ipsilateral to seizure onset with hippocampal atrophy had significantly higher ratios compared with sites contralateral to both seizure onset and hippocampal atrophy (P = 0.001). These data provide compelling quantitative and statistical evidence for the existence of two spectrally distinct groups of limbic oscillations that have frequency and duration characteristics similar to those previously described in epileptic rat and human Hip and EC. The strong association between FR and regions of seizure initiation supports the view that FR reflects pathological hypersynchronous events crucially associated with seizure genesis.},
 	author = {Staba, Richard J. and Wilson, Charles L. and Bragin, Anatol and Fried, Itzhak and Engel, Jerome},
 	date-added = {2019-09-19 17:45:32 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:46:29 +0100},
 	doi = {10.1152/jn.2002.88.4.1743},
 	issn = {1522-1598},
 	journal = {Journal of Neurophysiology},
@@ -26586,7 +26592,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {4},
 	pages = {1743--1752},
 	publisher = {American Physiological Society},
-	tags = {ripples},
+	tags = {ripples, human, intracranial},
 	title = {Quantitative Analysis of High-Frequency Oscillations (80--500 Hz) Recorded in Human Epileptic Hippocampus and Entorhinal Cortex},
 	url = {http://dx.doi.org/10.1152/jn.2002.88.4.1743},
 	volume = {88},
@@ -26597,7 +26603,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {In many species, spatial navigation is supported by a network of place cells that exhibit increased firing whenever an animal is in a certain region of an environment. Does this neural representation of location form part of the spatiotemporal context into which episodic memories are encoded? We recorded medial temporal lobe neuronal activity as epilepsy patients performed a hybrid spatial and episodic memory task. We identified place-responsive cells active during virtual navigation and then asked whether the same cells activated during the subsequent recall of navigation-related memories without actual navigation. Place-responsive cell activity was reinstated during episodic memory retrieval. Neuronal firing during the retrieval of each memory was similar to the activity that represented the locations in the environment where the memory was initially encoded.},
 	author = {Miller, J. F. and Neufang, M. and Solway, A. and Brandt, A. and Trippel, M. and Mader, I. and Hefft, S. and Merkow, M. and Polyn, S. M. and Jacobs, J. and et al.},
 	date-added = {2019-09-19 17:42:24 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:42:28 +0100},
 	doi = {10.1126/science.1244056},
 	issn = {1095-9203},
 	journal = {Science},
@@ -26605,6 +26611,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {6162},
 	pages = {1111--1114},
 	publisher = {American Association for the Advancement of Science (AAAS)},
+	tags = {human, intracranial},
 	title = {Neural Activity in Human Hippocampal Formation Reveals the Spatial Context of Retrieved Memories},
 	url = {http://dx.doi.org/10.1126/science.1244056},
 	volume = {342},
@@ -26615,7 +26622,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {The emergence of memory, a trace of things past, into human consciousness is one of the greatest mysteries of the human mind. Whereas the neuronal basis of recognition memory can be probed experimentally in human and nonhuman primates, the study of free recall requires that the mind declare the occurrence of a recalled memory (an event intrinsic to the organism and invisible to an observer). Here, we report the activity of single neurons in the human hippocampus and surrounding areas when subjects first view cinematic episodes consisting of audiovisual sequences and again later when they freely recall these episodes. A subset of these neurons exhibited selective firing, which often persisted throughout and following specific episodes for as long as 12 seconds. Verbal reports of memories of these specific episodes at the time of free recall were preceded by selective reactivation of the same hippocampal and entorhinal cortex neurons. We suggest that this reactivation is an internally generated neuronal correlate for the subjective experience of spontaneous emergence of human recollection.},
 	author = {Gelbard-Sagiv, H. and Mukamel, R. and Harel, M. and Malach, R. and Fried, I.},
 	date-added = {2019-09-19 17:34:09 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:44:41 +0100},
 	doi = {10.1126/science.1164685},
 	issn = {1095-9203},
 	journal = {Science},
@@ -26623,7 +26630,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {5898},
 	pages = {96--101},
 	publisher = {American Association for the Advancement of Science (AAAS)},
-	tags = {ripples; replay},
+	tags = {ripples, replay, human, intracranial},
 	title = {Internally Generated Reactivation of Single Neurons in Human Hippocampus During Free Recall},
 	url = {http://dx.doi.org/10.1126/science.1164685},
 	volume = {322},
@@ -26634,7 +26641,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {Episodic memory retrieval relies on the recovery of neural representations of waking experience. This process is thought to involve a communication dynamic between the medial temporal lobe memory system and the neocortex. How this occurs is largely unknown, however, especially as it pertains to awake human memory retrieval. Using intracranial electroencephalographic recordings, we found that ripple oscillations were dynamically coupled between the human medial temporal lobe (MTL) and temporal association cortex. Coupled ripples were more pronounced during successful verbal memory retrieval and recover the cortical neural representations of remembered items. Together, these data provide direct evidence that coupled ripples between the MTL and association cortex may underlie successful memory retrieval in the human brain.},
 	author = {Vaz, Alex P. and Inati, Sara K. and Brunel, Nicolas and Zaghloul, Kareem A.},
 	date-added = {2019-09-19 17:31:12 +0200},
-	date-modified = {2020-03-31 14:28:12 +0200},
+	date-modified = {2021-02-16 11:43:34 +0100},
 	doi = {10.1126/science.aau8956},
 	issn = {1095-9203},
 	journal = {Science},
@@ -26642,7 +26649,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {6430},
 	pages = {975--978},
 	publisher = {American Association for the Advancement of Science (AAAS)},
-	tags = {ripples},
+	tags = {ripples, human, intracranial},
 	title = {Coupled ripple oscillations between the medial temporal lobe and neocortex retrieve human memory},
 	url = {http://dx.doi.org/10.1126/science.aau8956},
 	volume = {363},
@@ -26729,7 +26736,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	abstract = {High-frequency oscillations (ripples) have been described in the hippocampus and rhinal cortex of both animals and human subjects and have been linked to replay and consolidation of previously acquired information. More specifically, studies in rodents suggested that ripples are generated in the hippocampus and are then transferred into the rhinal cortex, and that they occur predominantly during negative half waves of neocortical slow oscillations. Recordings in human epilepsy patients used either microelectrodes or foramen ovale electrodes; it is thus unclear whether macroelectrodes, which are routinely used for pre-surgical investigations, allow the recording of ripples as well. Furthermore, no direct link between ripples and behavioural performance has yet been established. Here, we recorded intracranial electroencephalogram with macroelectrodes from the hippocampus and rhinal cortex contralateral to the seizure onset zone in 11 epilepsy patients during a memory consolidation task while they were having an afternoon `nap', i.e. a sleep period of ∼1 h duration. We found that ripples could reliably be detected both in the hippocampus and in the rhinal cortex and had a similar frequency composition to events recorded previously with microelectrodes in humans. Results from cross-correlation analysis revealed that hippocampal events were closely locked to rhinal events and were consistent with findings on transmission of ripples from the hippocampus into the rhinal cortex. Furthermore, hippocampal ripples were significantly locked to the phase of hippocampal delta band activity, which might provide a mechanism for the reported phase-locking to neocortical slow oscillations. Ripples occurred with the highest incidence during periods when subjects lay awake during the nap time. Finally, we found that the number of rhinal, but not hippocampal, ripples was correlated with the number of successfully recalled items (post-nap) learned prior to sleep. These data confirm previous recordings in animals and humans, but move beyond them in several respects: they are the first recordings of ripples in humans during a cognitive task and suggest that ripples are indeed related to behavioural performance; furthermore, they propose a mechanism for phase-locking of ripples to neocortical slow waves via phase coupling to hippocampal delta activity; finally, they show that ripples can be recorded reliably with standard macroelectrodes in the human brain.},
 	author = {Axmacher, N. and Elger, C. E. and Fell, J.},
 	date-added = {2019-09-19 15:32:45 +0200},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-16 11:42:48 +0100},
 	doi = {10.1093/brain/awn103},
 	issn = {1460-2156},
 	journal = {Brain},
@@ -26737,7 +26744,7 @@ predicted outcomes. However, three-day-old associations led to stronger backgrou
 	number = {7},
 	pages = {1806--1817},
 	publisher = {Oxford University Press (OUP)},
-	tags = {replay;},
+	tags = {replay, human, intracranial},
 	title = {Ripples in the medial temporal lobe are relevant for human memory consolidation},
 	url = {http://dx.doi.org/10.1093/brain/awn103},
 	volume = {131},
