--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -145,11 +145,33 @@ ggplot(data = bib_replay_time, aes(x = year, y = N)) +
   ylim(c(0, 70))
 ```
 
+## Replay Literature Reviews
+
+In this section, I filter publications in the `bibliography.bib` file for **literature review papers on replay**.
+The matching papers are listed in Figure \@ref(fig:replay-review).
+
+```{r, replay-review, fig.cap="Table of literature reviews on replay."}
+bib_replay_review = bib %>%
+  filter(stringr::str_detect(string = tags, pattern = "replay")) %>%
+  filter(stringr::str_detect(string = tags, pattern = "review")) %>%
+  setDT(.) %>%
+  .[,c("ID", "title", "author", "year", "journal", "url")]
+DT::datatable(
+  data = bib_replay_review,
+  class = "cell-border stripe", rownames = FALSE, escape = FALSE,
+  options = list(
+    scrollX = TRUE,
+    pageLength = 5,
+    lengthMenu = c(5, 10, 15, 20)
+  ),
+) 
+```
+
 ## Intracranial recordings in humans
 
 In this section, I filter publications in the `bibliography.bib` file for papers using **intracranial recordings in humans**.
 The matching papers are listed in Figure \@ref(fig:human-intracranial).
-Many (but not all) of them are investigating replay-like signals in the medial temporal lobe and therefore establish important correspondence to electrophysiological recordings of replay in rodents.
+Many (but not all!) of them are investigating replay-like signals in the medial temporal lobe and therefore establish important correspondence to electrophysiological recordings of replay in rodents.
 
 ```{r, human-intracranial, fig.cap="Table listing studies using intracranial recordings in humans."}
 bib_intracranial = bib %>%
